porpawki rozrachunki faktury

--- a/npkpir_23/web/wspolny/sub/fakturarozrach/faktura_rozrach_analiza.xhtml
+++ b/npkpir_23/web/wspolny/sub/fakturarozrach/faktura_rozrach_analiza.xhtml
@@ -66,8 +66,8 @@
                                 <h:outputText value="brak maila" rendered="#{fakturaRozrachunkiAnalizaView.szukanyklient.email eq null}"/>
                             </f:facet>
                             <f:facet name="input">
-                                <p:inputText value="#{fakturaRozrachunkiAnalizaView.szukanyklient.email}" requiredMessage="Brak emaila"
-                                             required="true" label="text" style="font-weight: bolder;" valueChangeListener="#{fakturaRozrachunkiAnalizaView.zmienmailkontrahenta}"/>  
+                                <p:inputText value="#{fakturaRozrachunkiAnalizaView.szukanyklient.email}"
+                                              label="text" style="font-weight: bolder;" valueChangeListener="#{fakturaRozrachunkiAnalizaView.zmienmailkontrahenta}"/>  
                             </f:facet>
                         </p:inplace>
                     </p:column>
