--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac.xhtml
@@ -80,7 +80,9 @@
                             <h:outputLabel for="wyslana" value="wysłana: " rendered="#{pasekwynagrodzenView.lista ne null and pasekwynagrodzenView.lista.size() gt 0 and pasekwynagrodzenView.lista.get(0).datawysylki ne null}"/>
                             <h:outputText id="wyslana" value="#{pasekwynagrodzenView.lista.get(0).datawysylki}" rendered="#{pasekwynagrodzenView.lista ne null and pasekwynagrodzenView.lista.size() gt 0}" style="color: red;"/>
                             </p:panelGrid>
+                            <p:messages />
                         </h:form>
+                        
                          <h:form  styleClass="formadmin" id="DefinicjalistaplacCreateForm2">
                             <p:outputLabel value="" for="wybranypracownik" />
                             <p:pickList id="wybranypracownik" value="#{pasekwynagrodzenView.listakalendarzmiesiac}" var="kalendarzItem" itemLabel="#{kalendarzItem.angaz.pracownik.nazwiskoImie}" itemValue="#{kalendarzItem}" 
@@ -103,6 +105,7 @@
                             <p:commandButton styleClass="buttonnorm2" actionListener="#{pasekwynagrodzenView.zapisz}" value="Save" update="PasekwynagrodzenListForm" />-->
                         <p:commandButton styleClass="buttonnorm2" actionListener="#{pasekwynagrodzenView.generujXLS}" value="lista XLS"  global="false"  ajax="false"/>
                             </p:panelGrid>
+                            
                         </h:form>
 <!--                        <p:selectOneMenu id="wybranypracownik" value="#{pasekwynagrodzenView.wybranykalendarz}" required="true" requiredMessage="Wybierz pracownika" converter="#{kalendarzmiesiacConverter}">
                             <f:selectItem itemLabel="wybierz" noSelectionOption="true"/>
